--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -252,19 +252,17 @@ h3 {
 .heberg {
     background-color: white;
     border-radius: 20px;
-    width: 260px;
+    width: 30%;
     height: 210px;
     margin-top: 10px;
-    margin-left: 40px;
+    margin-left: 10px;
     margin-right: 20px; 
 }
 
 .heberg img {
     border-radius: 20px 20px 0px 0px;
-    padding-top: 5px;
-    padding-left: 5px;
-    padding-right: 5px;
-    width: 250px;
+ 
+    width: 100%;
     height: 130px;
 }
 
@@ -489,7 +487,7 @@ h4 {
         margin-left: 30px;
     }
 }
-@media screen and (min-width: 769px) and (max-width: 980px) {
+@media screen and (min-width: 781px) and (max-width: 980px) {
     #logo {
         width: 100px;
     } 
@@ -504,8 +502,15 @@ h4 {
         width: 90%;
         margin-left: 30px;
     }
+    .heberg img {
+        width: 100%;
+        margin-left: -5px;
+        margin-top: -5px;
+    }
     .heberg {
         margin-left: 40px;
+        width: 40%;
+      
         
     }
     #activites {
@@ -516,28 +521,28 @@ h4 {
         grid-template-columns: repeat(1, 1fr);  
     }
     .port {
-        width: 100%;
-        margin-left: 0;
+        width: 90%;
+        margin-left: 40px;
     }
     .fort {
-        width: 97%;
-        margin-left: 30px;
+        width: 87%;
+        margin-left: 70px;
     }
     .ile {
-        width: 97%;
-        margin-left: 30px;
+        width: 87%;
+        margin-left: 70px;
     }
     .calanques {
-        width: 100%;
-        margin-left: 0;
+        width: 90%;
+        margin-left: 40px;
     }
     .notredame {
-        width: 100%;
-        margin-left: 0;
+        width: 90%;
+        margin-left: 40px;
     }
     .longchamp {
-        width: 100%;
-        margin-left: 0;
+        width: 90%;
+        margin-left: 40px;
     }
     .port img, .fort img, .ile img, .calanques img, .notredame img, .longchamp img{
         height: 200px;
@@ -548,7 +553,7 @@ h4 {
     
    
  
- @media screen and (min-width: 601px) and (max-width: 768px) {
+ @media screen and (min-width: 601px) and (max-width: 780px) {
      #logo {
          width: 100px;
      }
@@ -569,8 +574,20 @@ h4 {
     .heberetaside {
         flex-direction: column;
     } 
+    .heberg img {
+        width: 100%;
+        margin-left: -5px;
+        margin-top: -5px;
+    }
+    h2 {
+        margin-left: -20px;
+    }
+    h3 {
+        margin-left: -20px;
+    }
     .heberg {
         margin-left: 10px;
+        width: 45%;
     }       
     #popula {
         margin: 0;
@@ -745,11 +762,11 @@ h4 {
                 height: 40px;
                 margin-left: 10px;
                 border-radius: 80px;
-                width: 50%;
+                width: 40%;
                 }
                .eco2 {
                    border: 3px solid;
-                   width: 40%;
+                   width: 30%;
                    height: 40px;
                    border-radius: 80px;
                    margin-left: 10px;
@@ -759,14 +776,14 @@ h4 {
                 height: 40px;
                 margin-left: 10px;
                 border-radius: 80px;
-                width: 45%;
+                width: 40%;
                 margin-top: 10px;
             }
                 .eco4 {
                     margin-top: 10px;
                     margin-left: 10px;
                     height: 40px;
-                    width: 60%;
+                    width: 50%;
                     
                 }
                 .infofiltres {
