--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Raleway ', arial;
+    margin-left: 20px;
    
 }
 
@@ -18,13 +19,13 @@ body {
 #logo {
     height: 40px;
     width: 80px;
+    margin-top: 20px;
 }
-
 .menu ul {
     display: flex;
     float: right;
-    margin-top: -20px;
-    margin-right: 50px;
+    margin-top: -40px;
+    margin-right: 120px;
 }
 
 .inscrip {
@@ -44,6 +45,7 @@ body {
     color: black;
     margin-top: -5px;
 }
+
 
 a {
     display: block;
@@ -261,7 +263,6 @@ h3 {
 
 .heberg img {
     border-radius: 20px 20px 0px 0px;
- 
     width: 100%;
     height: 130px;
 }
@@ -449,6 +450,7 @@ footer {
     background-color: #F2F2F2;
     display: flex;
     justify-content: flex-start;
+    margin: -10px;
 }
 
 ul {
@@ -475,6 +477,9 @@ h4 {
 }
 
 @media screen and (min-width: 981px) and (max-width: 1460px) {
+    #logo {
+        width: 100px;
+    }
     .heberetaside {
         display: flex;
         flex-direction: column;
@@ -503,10 +508,10 @@ h4 {
         margin-left: 30px;
     }
     .heberg img {
-        width: 100%;
-        margin-left: -5px;
-        margin-top: -5px;
-    }
+            padding-left: 0px;
+            padding-top: 0px;
+        }
+
     .heberg {
         margin-left: 40px;
         width: 40%;
@@ -559,9 +564,11 @@ h4 {
      }
      .menu {
          margin-top: -10px;
+         margin-left: -900px;
      }
      .blue {
          border-top: none;
+         margin-top: -28px;
      }
      .inscrip {
          margin-top: 10px;
@@ -584,6 +591,10 @@ h4 {
     }
     h3 {
         margin-left: -20px;
+    }
+    .heberg img {
+        padding-left: 5px;
+        padding-top: 5px;
     }
     .heberg {
         margin-left: 10px;
@@ -650,11 +661,12 @@ h4 {
                margin-top: 10px;
             }
             .menu {
-                margin-top: 50px;
+                margin-top: 60px;
                 width: 100%;
                 display: flex;
                 justify-content: center;
                 font-size: 20px;
+                margin-left: 50px;
             }
             .menu ul {
                 width: 100%;
@@ -762,11 +774,11 @@ h4 {
                 height: 40px;
                 margin-left: 10px;
                 border-radius: 80px;
-                width: 40%;
+                width: 50%;
                 }
                .eco2 {
                    border: 3px solid;
-                   width: 30%;
+                   width: 40%;
                    height: 40px;
                    border-radius: 80px;
                    margin-left: 10px;
@@ -776,14 +788,14 @@ h4 {
                 height: 40px;
                 margin-left: 10px;
                 border-radius: 80px;
-                width: 40%;
+                width: 50%;
                 margin-top: 10px;
             }
                 .eco4 {
                     margin-top: 10px;
                     margin-left: 10px;
                     height: 40px;
-                    width: 50%;
+                    width: 60%;
                     
                 }
                 .infofiltres {
