--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -58,7 +58,7 @@ a {
 h1 {
     font-size: 20px;
     font-weight: bold;
-    margin-top: 40px;
+    margin-top: 30px;
     margin-bottom: 2px;
 }
 
@@ -244,7 +244,7 @@ h3 {
     margin-top: 40px;
 }
 
-#hotel {
+.hotel {
     display: flex;
     flex-wrap: wrap;
     border-radius: 20px;
@@ -270,8 +270,9 @@ h3 {
 figcaption {
     color: black;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 14px;
     margin-left: 10px;
+    margin-top: 5px;
 }
 
 
@@ -349,11 +350,12 @@ h3 {
 
 
 #ho {
-    font-size: 15px;
+    width: 70%;
+    font-size: 14px;
     color: black;
     font-weight: bold;
-    padding-left: 0px;
-    padding-top: 10px;
+  
+    padding-top: 5px;
 }
 
 .star2{
@@ -365,6 +367,7 @@ h3 {
 
 
 .nuit {
+    font-size: 14px;
     color: black;
     padding-left: 10px;
 }
@@ -438,7 +441,7 @@ h5 {
     width: 100%;
     border-radius: 25px 25px 0 0;
 }
-#legende {
+#activites figcaption {
     padding-top: 20px;
     padding-bottom: 5px;
     padding-left: 10px;
@@ -450,19 +453,20 @@ footer {
     background-color: #F2F2F2;
     display: flex;
     justify-content: flex-start;
-    margin: -10px;
+    margin-top: 20px;
+    width: 100%;
 }
 
 ul {
     list-style-type: none;
 }
-
-h4 {
-    margin-left: 50px;
-}
 .foot {
     color: black;
 }
+h4 {
+    margin-left: 50px;
+}
+
 .bloc1 {
     margin-top: 20px;
 }
@@ -484,6 +488,7 @@ h4 {
         display: flex;
         flex-direction: column;
     }
+
     #popula {
         margin: 0;
     }
@@ -493,6 +498,7 @@ h4 {
     }
 }
 @media screen and (min-width: 781px) and (max-width: 980px) {
+   
     #logo {
         width: 100px;
     } 
@@ -501,11 +507,14 @@ h4 {
         flex-direction: column;
     }
     #popula {
-        margin: 0;
+        margin-left: -10px;
     }
     .popul, .popul2, .popul3 {
         width: 90%;
         margin-left: 30px;
+    }
+    #hebergements {
+        margin-left: -5px;   
     }
     .heberg img {
             padding-left: 0px;
@@ -559,6 +568,9 @@ h4 {
    
  
  @media screen and (min-width: 601px) and (max-width: 780px) {
+     body {
+         margin-left: 5px;
+     }
      #logo {
          width: 100px;
      }
@@ -585,6 +597,8 @@ h4 {
         width: 100%;
         margin-left: -5px;
         margin-top: -5px;
+        padding-left: 5px;
+        padding-top: 5px;
     }
     h2 {
         margin-left: -20px;
@@ -592,13 +606,9 @@ h4 {
     h3 {
         margin-left: -20px;
     }
-    .heberg img {
-        padding-left: 5px;
-        padding-top: 5px;
-    }
     .heberg {
-        margin-left: 10px;
-        width: 45%;
+        margin-left: 20px;
+        width: 40%;
     }       
     #popula {
         margin: 0;
@@ -653,7 +663,9 @@ h4 {
      
  }
         @media screen and (max-width: 600px) {
-            
+            body {
+                margin-left: 0;
+            }
             #logo {
                 width: 100px;
                 height: auto;
@@ -666,31 +678,29 @@ h4 {
                 display: flex;
                 justify-content: center;
                 font-size: 20px;
-                margin-left: 50px;
             }
             .menu ul {
                 width: 100%;
             }
+            .blue {
+                border-bottom: solid 3px #f2f2f2;
+                width: 100%;
+                border-top: none;
+            }
             .menu ul li {
                 width: 100%;
               
-                border-bottom: solid 3px #f2f2f2;
             }
             .menu ul li:hover {
                 border-bottom: 3px solid #0065FC;
             }
             .black {
                 margin-top: -8px;
-                margin-left: 10px;
                 width: 100%; 
+                border-bottom: solid 3px #f2f2f2;
             }
             .inscrip {
                 font-size: 20px;
-            }
-          
-            .blue {
-                border-top: none; 
-                width: 100%;          
             }
             .presentation {
                 margin-top: -20px;
@@ -717,13 +727,13 @@ h4 {
                 width: 400px;
             }
             button {
-            height: 50px;
-            width: 70px;
-            border-radius: 20px;
-            margin-left: -10px;
+                height: 50px;
+                width: 70px;
+                border-radius: 20px;
+                margin-left: -10px;
             }
             .fas.fa-search {
-                margin-top: 0px;
+                margin-top: -10px;
                 font-size: 15px;
             }
             .rech {
@@ -793,14 +803,15 @@ h4 {
             }
                 .eco4 {
                     margin-top: 10px;
-                    margin-left: 10px;
+                    margin-left: 12px;
                     height: 40px;
-                    width: 60%;
-                    
+                    width: 60%; 
                 }
                 .infofiltres {
-                    margin-left: 10px;
+                    margin-left: 15px;
+                    width: 80%;
                 }
+                
                 .heberetaside {
                     flex-direction: column;
                 }
@@ -828,7 +839,7 @@ h4 {
                 }
                 .heberg {
                     width: 100%;          
-                    margin-left: 10px;
+                    margin-left: 20px;
                     margin-bottom: 10px;
                     border: 3px;
                     box-shadow: 0px 3px 3px 0px #F2F2F2;
@@ -840,7 +851,7 @@ h4 {
                     border-radius: 20px 20px 0px 0px;
                 }
                 h2 {
-                    margin-left: -30px;
+                    margin-left: -10px;
                     margin-top: -10px;
                 }
                 figcaption {
@@ -850,7 +861,7 @@ h4 {
                     font-size: 13px;
                 }
                 h3 {
-                    margin-left: -35px;
+                    margin-left: -10px;
                     margin-top: 10px;
                 }
                 #acti {
@@ -861,6 +872,7 @@ h4 {
                 h5 {
                     margin-top: 15px;
                     font-size: 20px;
+                    margin-left: 20px;
                 }
                 #activites img {
                     width: 100%;
@@ -906,7 +918,7 @@ h4 {
                     width: 95%;
                 }
                 
-                #legende {
+                #activites figcaption {
                     font-size: 15px;
                    
                     margin-left: 10px;
