--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,9 @@
 body {
     font-family: 'Raleway ', arial;
-    margin-left: 20px;
-   
+}
+.body-margin {
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 #blocpage {
@@ -90,11 +92,13 @@ p {
     height: 42px;
     width: 200px;
     border: 2px solid  #F2F2F2;
+    padding-left: 10px;
 }
 
 #search::placeholder {
     font-weight: bold;
     color: black;
+    opacity: 1;
 }
 
 button {
@@ -125,6 +129,9 @@ button {
 
 .filtres {
     display: flex;
+}
+.aco {
+    margin-top: 10px;
 }
 
 
@@ -253,7 +260,7 @@ h3 {
  
 .heberg {
     background-color: white;
-    border-radius: 20px;
+    border-radius: 15px;
     width: 30%;
     height: 210px;
     margin-top: 10px;
@@ -262,7 +269,7 @@ h3 {
 }
 
 .heberg img {
-    border-radius: 20px 20px 0px 0px;
+    border-radius: 15px 15px 0px 0px;
     width: 100%;
     height: 130px;
 }
@@ -381,6 +388,9 @@ h5 {
     margin-top: 50px;
     margin-bottom: 5px;
 }
+.padding-0 {
+    padding: 0;
+}
 #acti {
     display: grid;
     grid-template-columns: repeat(4, 24%);
@@ -484,6 +494,10 @@ h4 {
     #logo {
         width: 100px;
     }
+    .body-margin {
+        margin-left: 40px;
+        margin-right: 40px;
+    } 
     .heberetaside {
         display: flex;
         flex-direction: column;
@@ -501,8 +515,12 @@ h4 {
    
     #logo {
         width: 100px;
+    }
+    .body-margin {
+        margin-left: 40px;
+        margin-right: 40px;
     } 
-    .heberetaside {
+        .heberetaside {
         display: flex;
         flex-direction: column;
     }
@@ -666,6 +684,9 @@ h4 {
             body {
                 margin-left: 0;
             }
+            .body-margin {
+                margin-left: 0;
+            }
             #logo {
                 width: 100px;
                 height: auto;
@@ -674,31 +695,31 @@ h4 {
             }
             .menu {
                 margin-top: 60px;
-                width: 100%;
                 display: flex;
-                justify-content: center;
                 font-size: 20px;
             }
-            .menu ul {
-                width: 100%;
+            .menu ul li {
+                border-bottom: solid 3px #f2f2f2;
+                text-align: center;
+                width: 200px;
+                margin-left: -35px;
+                
             }
             .blue {
-                border-bottom: solid 3px #f2f2f2;
-                width: 100%;
                 border-top: none;
-            }
-            .menu ul li {
-                width: 100%;
-              
-            }
-            .menu ul li:hover {
-                border-bottom: 3px solid #0065FC;
+                margin-left: 20px;
+            
             }
             .black {
                 margin-top: -8px;
-                width: 100%; 
-                border-bottom: solid 3px #f2f2f2;
+              
             }
+            
+           
+            .menu ul li:hover {
+                border-bottom: 3px solid #0065FC;
+            }
+        
             .inscrip {
                 font-size: 20px;
             }
