--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -275,12 +275,12 @@ h3 {
     height: 130px;
 }
 
-figcaption {
+.legende-heber {
     color: black;
     font-weight: bold;
     font-size: 14px;
     margin-left: 10px;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 
@@ -299,7 +299,8 @@ i.far {
     color: black;
     font-size: 13px;
     margin-left: 10px;
-    margin-top: 3px;
+    margin-top: -10px;
+   
     
 }
 
@@ -456,6 +457,7 @@ h5 {
 .legende {
     padding-top: 10px;
     padding-left: 10px;
+    color: black;
 }
 
 /* FOOTER */
@@ -740,8 +742,8 @@ h4 {
                 margin-right: 20px;
             }
             .barre {
-                margin-left: 10px;
-                margin-right: 10px;
+                margin-left: 20px;
+            
             }
             .point {
                 width: 50px;
@@ -841,7 +843,7 @@ h4 {
                 }
                 .infofiltres {
                     margin-left: 15px;
-                    width: 80%;
+                    width: 100%;
                 }
                 
                 .heberetaside {
@@ -901,6 +903,13 @@ h4 {
                     flex-direction: column;
                     margin-left: 10px;
                     width: 370px;
+                }
+                .ho {
+                    font-size: 15px;
+                    width: 90%;
+                }
+                .nuit {
+                    font-size: 15px;
                 }
                 h5 {
                     margin-top: 15px;
